Make the teacher side code in the available in the multiple languages

--- a/proactive-education-assistant/src/locales/hi/translation.json
+++ b/proactive-education-assistant/src/locales/hi/translation.json
@@ -7,8 +7,21 @@
   "nav": {
     "dashboard": "डैशबोर्ड",
     "students": "छात्र",
+    "dataEntry": "डेटा एंट्री",
     "about": "बारे में",
     "contact": "संपर्क करें"
+  },
+  "teacher_nav": {
+    "my_classes": "मेरी कक्षाएं",
+    "add_student": "छात्र जोड़ें",
+    "attendance_history": "उपस्थिति इतिहास",
+    "interventions_history": "हस्तक्षेप इतिहास",
+    "score_history": "स्कोर इतिहास",
+    "progress": "प्रगति",
+    "faculty_chat": "फैकल्टी चैट",
+    "teacher_portal": "शिक्षक पोर्टल",
+    "overview": "अवलोकन",
+    "analytics_history": "विश्लेषण और इतिहास"
   },
   "auth": {
     "login": "लॉगिन",
@@ -50,6 +63,7 @@
     "trusted_badge": "200+ स्कूल और एनजीओ द्वारा विश्वसनीय",
     "headline": "छात्र ड्रॉपआउट को <1>पहले ही रोके</1>",
     "subheadline": "शिक्षकों, फील्डवर्कर्स और एनजीओ के लिए एआई-संचालित प्रारंभिक चेतावनी प्रणाली",
+    "early_detection": "अपने डैशबोर्ड पर जारी रखने के लिए साइन इन करें",
     "start_trial": "मुफ्त परीक्षण शुरू करें",
     "view_demo": "डेमो देखें",
     "no_cc": "कोई क्रेडिट कार्ड आवश्यक नहीं • 30-दिन का नि:शुल्क परीक्षण",
@@ -135,6 +149,113 @@
     "coming_soon_add_score": "जल्द आ रहा है: स्कोर जोड़ें",
     "coming_soon_add_behaviour": "जल्द आ रहा है: व्यवहार जोड़ें"
   },
+  "teacher_dashboard": {
+    "quick_add_attendance": "उपस्थिति जोड़ें",
+    "quick_add_student": "छात्र जोड़ें",
+    "quick_view_students": "छात्र देखें",
+    "quick_add_score": "स्कोर जोड़ें",
+    "loading_classes": "कक्षाएं लोड हो रही हैं...",
+    "no_classes_assigned": "अभी तक आपको कोई कक्षा आवंटित नहीं है",
+    "showing": "दिखा रहा है",
+    "training_model": "नया मॉडल ट्रेन हो रहा है...",
+    "retrain_button": "नवीनतम डेटा से AI पुनः प्रशिक्षित करें",
+    "loading_ml": "ML जोखिम पूर्वानुमान लोड हो रहे हैं...",
+    "critical_risk": "गंभीर जोखिम",
+    "ml_powered": "ML-आधारित जोखिम पूर्वानुमान",
+    "no_critical_high": "अभी कोई गंभीर या उच्च जोखिम वाला छात्र नहीं",
+    "risk_score": "जोखिम स्कोर",
+    "na": "उपलब्ध नहीं"
+  },
+  "teacher_students": {
+    "gathering_data": "⏳ डेटा एकत्रित हो रहा है",
+    "loading_students": "छात्र लोड हो रहे हैं...",
+    "error_loading_students": "छात्र लोड करने में त्रुटि",
+    "retry": "पुनः प्रयास करें",
+    "search_placeholder": "नाम या नामांकन संख्या से खोजें...",
+    "filter_risk": "जोखिम स्तर से फ़िल्टर करें",
+    "all_risk_levels": "सभी जोखिम स्तर",
+    "group_by": "समूह बनाएं",
+    "no_grouping": "कोई समूह नहीं",
+    "enrollment_no": "नामांकन संख्या",
+    "contact": "संपर्क",
+    "add_students": "छात्र जोड़ें",
+    "all_students": "सभी छात्र",
+    "unassigned": "असाइन नहीं",
+    "found_count": "{{count}} छात्र मिले",
+    "count_only": "{{count}} छात्र",
+    "section_short": "सेक",
+    "section": "सेक्शन"
+  },
+  "teacher_classes": {
+    "title": "मेरी कक्षाएं",
+    "subtitle": "अपनी आवंटित कक्षाओं को देखें और प्रबंधित करें",
+    "total_classes": "कुल कक्षाएं",
+    "as_incharge": "इंचार्ज के रूप में",
+    "as_subject_teacher": "विषय शिक्षक के रूप में",
+    "no_classes": "अभी कोई कक्षा आवंटित नहीं है",
+    "no_classes_hint": "कक्षाएं आवंटित करने के लिए अपने एडमिन से संपर्क करें",
+    "incharge": "इंचार्ज",
+    "subject_teacher": "विषय शिक्षक",
+    "daily": "दैनिक",
+    "subject_wise": "विषयवार",
+    "view_students": "छात्र देखें",
+    "academic_year": "शैक्षणिक वर्ष",
+    "attendance": "उपस्थिति",
+    "teaching": "पढ़ाए जा रहे विषय",
+    "add": "जोड़ें",
+    "mark": "मार्क करें"
+  },
+  "teacher_data_entry": {
+    "attendance": "उपस्थिति",
+    "attend_short": "उपस्थि",
+    "scores": "स्कोर",
+    "behaviour": "व्यवहार",
+    "behavior_short": "व्यवहार",
+    "interventions": "हस्तक्षेप",
+    "interv_short": "हस्तक्षेप",
+    "subtitle": "उपस्थिति, स्कोर, व्यवहार और हस्तक्षेप रिकॉर्ड करें"
+  },
+  "teacher_leaderboard": {
+    "title": "लीडरबोर्ड",
+    "subtitle": "देखें कि आप अपने स्कूल और अन्य शिक्षकों की तुलना में कहाँ खड़े हैं",
+    "current_rank": "आपकी वर्तमान रैंक",
+    "total_xp": "कुल XP",
+    "level": "लेवल",
+    "badges": "बैज",
+    "top_performers": "शीर्ष प्रदर्शनकर्ता",
+    "full_rankings": "पूर्ण रैंकिंग",
+    "loading": "लीडरबोर्ड लोड हो रहा है...",
+    "stats": "लीडरबोर्ड आँकड़े",
+    "total_teachers": "कुल शिक्षक",
+    "average_level": "औसत लेवल",
+    "highest_xp": "सर्वाधिक XP"
+  },
+  "teacher_profile": {
+    "loading": "प्रोफ़ाइल लोड हो रही है...",
+    "teacher": "शिक्षक",
+    "edit": "संपादित करें",
+    "edit_profile": "प्रोफ़ाइल संपादित करें",
+    "cancel": "रद्द करें",
+    "saving": "सहेजा जा रहा है...",
+    "save_changes": "परिवर्तन सहेजें",
+    "personal_information": "व्यक्तिगत जानकारी",
+    "full_name": "पूरा नाम",
+    "email": "ईमेल",
+    "phone": "फोन",
+    "designation": "पद",
+    "city": "शहर",
+    "state": "राज्य",
+    "pincode": "पिनकोड",
+    "address": "पता",
+    "full_address": "पूरा पता",
+    "school_information": "स्कूल जानकारी",
+    "school_name": "स्कूल का नाम",
+    "school_address": "स्कूल का पता",
+    "account_status": "खाता स्थिति",
+    "account_active": "आपका खाता सक्रिय और सत्यापित है",
+    "logout": "लॉगआउट",
+    "not_provided": "उपलब्ध नहीं"
+  },
   "dashboard": {
     "title": "डैशबोर्ड",
     "subtitle": "छात्र ड्रॉपआउट जोखिम का प्रारंभिक चेतावनी अवलोकन",
@@ -154,6 +275,49 @@
     "offline": "ऑफलाइन मोड",
     "online_desc": "सभी डेटा सिंक किया गया है और अद्यतन है",
     "offline_desc": "ऑफलाइन मोड: इंटरनेट उपलब्ध होने पर डेटा सिंक होगा"
+  },
+  "admin": {
+    "title": "एडमिन डैशबोर्ड",
+    "subtitle": "सिस्टम-स्तरीय एनालिटिक्स और उपयोगकर्ता प्रबंधन",
+    "total_teachers": "कुल शिक्षक",
+    "active_fieldworkers": "सक्रिय फील्डवर्कर",
+    "total_ngos": "कुल एनजीओ",
+    "system_uptime": "सिस्टम अपटाइम",
+    "teacher_accounts": "शिक्षक खाते",
+    "view_all_teachers": "सभी शिक्षक देखें",
+    "fieldworker_assignments": "फील्डवर्कर असाइनमेंट",
+    "view_all_fieldworkers": "सभी फील्डवर्कर देखें",
+    "ngo_partnerships": "एनजीओ साझेदारियाँ",
+    "view_all_ngos": "सभी एनजीओ देखें",
+    "recent_activity": "हाल की गतिविधि"
+  },
+  "fieldworker": {
+    "title": "फील्डवर्कर डैशबोर्ड",
+    "subtitle": "घर-घर विज़िट और सामुदायिक जुड़ाव ट्रैक करें",
+    "pending_visits": "लंबित विज़िट",
+    "completed_visits": "पूर्ण हुई विज़िट",
+    "families_engaged": "जुड़े हुए परिवार",
+    "interventions_logged": "लॉग किए गए हस्तक्षेप",
+    "upcoming_home_visits": "आगामी घर विज़िट",
+    "view_all_visits": "सभी विज़िट देखें",
+    "recent_interventions": "हाल के हस्तक्षेप",
+    "view_all_interventions": "सभी हस्तक्षेप देखें",
+    "community_resources": "सामुदायिक संसाधन",
+    "view_resources": "संसाधन देखें"
+  },
+  "ngo": {
+    "title": "एनजीओ डैशबोर्ड",
+    "subtitle": "स्कूलों के साथ समन्वय करें और प्रभाव ट्रैक करें",
+    "partner_schools": "साझेदार स्कूल",
+    "students_supported": "समर्थित छात्र",
+    "active_programs": "सक्रिय कार्यक्रम",
+    "impact_score": "प्रभाव स्कोर",
+    "schools_overview": "स्कूल अवलोकन",
+    "view_all_schools": "सभी स्कूल देखें",
+    "program_effectiveness": "कार्यक्रम प्रभावशीलता",
+    "view_program_details": "कार्यक्रम विवरण देखें",
+    "resource_allocation": "संसाधन आवंटन",
+    "manage_resources": "संसाधन प्रबंधित करें"
   },
   "students": {
     "page_title": "छात्र सूची",
@@ -187,6 +351,47 @@
     "no_students_desc": "अपने फ़िल्टर समायोजित करने या छात्र जोड़ने का प्रयास करें।",
     "grade": "ग्रेड",
     "add_new_student": "नया छात्र जोड़ें"
+  },
+  "about": {
+    "page_title": "हमारे बारे में",
+    "mission_title": "हमारा मिशन",
+    "mission_text": "शिक्षकों को डेटा-आधारित अंतर्दृष्टि देकर छात्र ड्रॉपआउट रोकना और हर बच्चे को उसकी योग्य शिक्षा दिलाना।",
+    "vision_title": "हमारी दृष्टि",
+    "vision_text": "एक ऐसा विश्व जहाँ कोई भी छात्र टाली जा सकने वाली परिस्थितियों के कारण पढ़ाई न छोड़े।",
+    "team_title": "हमारी टीम",
+    "features_title": "मुख्य विशेषताएँ",
+    "feature_ai_title": "एआई-संचालित जोखिम पहचान",
+    "feature_ai_desc": "उन्नत एल्गोरिद्म समय रहते ड्रॉपआउट जोखिम का अनुमान लगाते हैं।",
+    "feature_realtime_title": "रीयल-टाइम मॉनिटरिंग",
+    "feature_realtime_desc": "उपस्थिति, अंक और व्यवहार पैटर्न तुरंत ट्रैक करें।",
+    "feature_interventions_title": "स्मार्ट हस्तक्षेप",
+    "feature_interventions_desc": "हर जोखिमग्रस्त छात्र के लिए व्यक्तिगत कार्ययोजना प्राप्त करें।",
+    "feature_collaboration_title": "सहयोग उपकरण",
+    "feature_collaboration_desc": "फील्डवर्कर्स, एनजीओ और अभिभावकों के साथ सहज समन्वय करें।"
+  },
+  "contact": {
+    "page_title": "संपर्क करें",
+    "page_subtitle": "हम आपसे सुनना पसंद करेंगे",
+    "contact_info_title": "संपर्क जानकारी",
+    "email_label": "ईमेल",
+    "phone_label": "फ़ोन",
+    "address_label": "पता",
+    "address_text": "प्रोएक्टिव एजुकेशन असिस्टेंट, भारत",
+    "form_name_label": "पूरा नाम",
+    "form_name_placeholder": "जॉन डो",
+    "form_email_label": "ईमेल पता",
+    "form_email_placeholder": "you@example.com",
+    "form_subject_label": "विषय",
+    "form_subject_placeholder": "हम आपकी कैसे मदद कर सकते हैं?",
+    "form_message_label": "संदेश",
+    "form_message_placeholder": "अपना संदेश लिखें...",
+    "form_submit": "संदेश भेजें",
+    "form_sending": "भेजा जा रहा है..."
+  },
+  "errors": {
+    "404_title": "404 - पेज नहीं मिला",
+    "404_message": "आप जिस पेज को खोज रहे हैं वह मौजूद नहीं है।",
+    "go_home": "डैशबोर्ड पर जाएं"
   },
   "risk": {
     "high": "उच्च जोखिम",
@@ -273,6 +478,134 @@
     "goHome": "होम पर जाएं",
     "enable": "सक्षम करें",
     "manage": "प्रबंधित करें"
+  },
+  "teacher_attendance": {
+    "title": "उपस्थिति इतिहास",
+    "subtitle": "उपस्थिति रिकॉर्ड देखें और विश्लेषण करें",
+    "filters": "फ़िल्टर",
+    "search_placeholder": "छात्र के नाम से खोजें...",
+    "class": "कक्षा",
+    "all_classes": "सभी कक्षाएं",
+    "from_date": "प्रारंभ तिथि",
+    "to_date": "समाप्ति तिथि",
+    "clear_filters": "फ़िल्टर साफ़ करें",
+    "show_records": "{{count}} रिकॉर्ड दिखाएं",
+    "date": "तारीख",
+    "total_students": "कुल छात्र",
+    "present": "उपस्थित",
+    "absent": "अनुपस्थित",
+    "attendance_percent": "उपस्थिति %",
+    "actions": "क्रिया",
+    "view": "देखें",
+    "export_to_excel": "Excel में निर्यात करें",
+    "attendance_details": "उपस्थिति विवरण",
+    "student_attendance": "छात्र उपस्थिति",
+    "name": "नाम",
+    "enrollment": "नामांकन संख्या",
+    "status": "स्थिति",
+    "marked_by": "द्वारा चिह्नित",
+    "close": "बंद करें",
+    "no_records_found": "कोई उपस्थिति रिकॉर्ड नहीं मिला",
+    "export_success": "उपस्थिति रिकॉर्ड सफलतापूर्वक निर्यात हो गया",
+    "failed_to_load": "उपस्थिति रिकॉर्ड लोड नहीं हो सके",
+    "export_failed": "उपस्थिति रिकॉर्ड निर्यात करने में विफल"
+  },
+  "teacher_score": {
+    "title": "स्कोर इतिहास",
+    "subtitle": "परीक्षा के स्कोर देखें और विश्लेषण करें",
+    "filters": "फ़िल्टर",
+    "search": "खोजें",
+    "search_placeholder": "छात्र के नाम से खोजें...",
+    "class": "कक्षा",
+    "all_classes": "सभी कक्षाएं",
+    "subject": "विषय",
+    "all_subjects": "सभी विषय",
+    "from": "प्रारंभ तिथि",
+    "to": "समाप्ति तिथि",
+    "clear_filters": "फ़िल्टर साफ़ करें",
+    "export": "Excel में निर्यात करें",
+    "exam": "परीक्षा",
+    "date": "तारीख",
+    "students": "छात्र",
+    "avg_percent": "औसत %",
+    "pass_percent": "सफल %",
+    "actions": "क्रिया",
+    "view": "देखें",
+    "showing_records": "{{count}} रिकॉर्ड दिखा रहे हैं",
+    "score_details": "स्कोर विवरण",
+    "appeared": "प्रकट हुए",
+    "avg_marks": "औसत अंक",
+    "pass_rate": "सफलता दर",
+    "student_scores": "छात्र स्कोर",
+    "pass": "सफल",
+    "fail": "असफल",
+    "close": "बंद करें",
+    "no_records": "कोई स्कोर रिकॉर्ड नहीं मिला",
+    "export_success": "स्कोर रिकॉर्ड सफलतापूर्वक निर्यात हो गया",
+    "failed_to_load": "स्कोर रिकॉर्ड लोड नहीं हो सके",
+    "export_failed": "स्कोर रिकॉर्ड निर्यात करने में विफल"
+  },
+  "teacher_interventions": {
+    "title": "हस्तक्षेप इतिहास",
+    "found_count": "{{count}} हस्तक्षेप मिला",
+    "filters": "फ़िल्टर",
+    "search_placeholder": "छात्र के नाम से खोजें...",
+    "all_statuses": "सभी स्थितियां",
+    "planned": "योजित",
+    "in_progress": "प्रगति में",
+    "completed": "पूर्ण",
+    "cancelled": "रद्द",
+    "clear_filters": "फ़िल्टर साफ़ करें",
+    "student": "छात्र",
+    "type": "प्रकार",
+    "description": "विवरण",
+    "date": "तारीख",
+    "status": "स्थिति",
+    "action": "क्रिया",
+    "view_student": "छात्र देखें",
+    "showing_count": "{{count}} हस्तक्षेप दिखा रहे हैं",
+    "no_interventions": "कोई हस्तक्षेप नहीं मिला",
+    "adjust_filters": "अपने फ़िल्टर को समायोजित करने का प्रयास करें",
+    "error_loading": "हस्तक्षेप लोड करने में त्रुटि",
+    "retry": "पुन: प्रयास करें"
+  },
+  "teacher_gamification": {
+    "title": "🎯 शिक्षक प्रगति और पुरस्कार",
+    "subtitle": "XP अर्जित करें, स्तर बढ़ाएं और बैज अनलॉक करें!",
+    "how_it_works": "गेमिफिकेशन कैसे काम करता है",
+    "earn_xp": "XP अर्जित करें",
+    "earn_xp_desc": "कार्य पूरा करें और अनुभव बिंदु अर्जित करने के लिए मील के पत्थर प्राप्त करें",
+    "level_up": "स्तर बढ़ाएं",
+    "level_up_desc": "स्तरों के माध्यम से आगे बढ़ने और नए पुरस्कार अनलॉक करने के लिए XP जमा करें",
+    "collect_badges": "बैज संग्रहित करें",
+    "collect_badges_desc": "विशिष्ट लक्ष्य और मील के पत्थर प्राप्त करके विशेष बैज अर्जित करें",
+    "climb_leaderboard": "लीडरबोर्ड पर चढ़ें",
+    "climb_leaderboard_desc": "सहकर्मियों के साथ प्रतिस्पर्धा करें और अपने स्कूल के लीडरबोर्ड के शीर्ष पर चढ़ें"
+  },
+  "teacher_faculty": {
+    "title": "फैकल्टी कनेक्ट",
+    "subtitle": "अपने स्कूल में शिक्षकों से जुड़ें",
+    "open_chat": "चैट खोलें",
+    "faculty_in_school": "स्कूल में फैकल्टी",
+    "pending_received": "प्राप्त लंबित",
+    "connected_faculty": "जुड़ी हुई फैकल्टी",
+    "search_faculty": "फैकल्टी खोजें",
+    "search_placeholder": "शिक्षक के नाम से खोजें...",
+    "teachers_in_school": "{{schoolName}} में शिक्षक",
+    "no_faculty_matched": "कोई फैकल्टी सदस्य मेल नहीं खाया",
+    "connected": "जुड़े हुए",
+    "chat": "चैट",
+    "invitation_received": "निमंत्रण प्राप्त",
+    "invitation_sent": "निमंत्रण भेजा गया",
+    "send_invite": "निमंत्रण भेजें",
+    "sending": "भेज रहे हैं...",
+    "incoming_invitations": "आने वाले निमंत्रण",
+    "no_pending_invitation": "कोई लंबित निमंत्रण नहीं",
+    "accept": "स्वीकार करें",
+    "reject": "अस्वीकार करें",
+    "sent_invitations": "भेजे गए निमंत्रण",
+    "no_sent_invite": "कोई लंबित भेजे गए निमंत्रण नहीं",
+    "awaiting_acceptance": "स्वीकृति की प्रतीक्षा में"
   }
 }
 
