--- a/proactive-education-assistant/src/locales/mr/translation.json
+++ b/proactive-education-assistant/src/locales/mr/translation.json
@@ -7,8 +7,21 @@
   "nav": {
     "dashboard": "डॅशबोर्ड",
     "students": "विद्यार्थी",
+    "dataEntry": "डेटा एन्ट्री",
     "about": "आमच्याबद्दल",
     "contact": "संपर्क"
+  },
+  "teacher_nav": {
+    "my_classes": "माझे वर्ग",
+    "add_student": "विद्यार्थी जोडा",
+    "attendance_history": "उपस्थिती इतिहास",
+    "interventions_history": "हस्तक्षेप इतिहास",
+    "score_history": "गुण इतिहास",
+    "progress": "प्रगती",
+    "faculty_chat": "फॅकल्टी चॅट",
+    "teacher_portal": "शिक्षक पोर्टल",
+    "overview": "आढावा",
+    "analytics_history": "विश्लेषण आणि इतिहास"
   },
   "auth": {
     "login": "लॉगिन",
@@ -50,6 +63,7 @@
     "trusted_badge": "200+ शाळा आणि NGO द्वारे विश्वसनीय",
     "headline": "विद्यार्थी शाळा सोडण्यापूर्वीच <1>थांबवा</1>",
     "subheadline": "शिक्षक, फील्डवर्कर्स आणि NGO साठी AI-चालित लवकर चेतावणी प्रणाली",
+    "early_detection": "तुमच्या डॅशबोर्डवर पुढे जाण्यासाठी साइन इन करा",
     "start_trial": "मोफत चाचणी सुरू करा",
     "view_demo": "डेमो पहा",
     "no_cc": "क्रेडिट कार्ड आवश्यक नाही • 30-दिवस मोफत चाचणी",
@@ -135,6 +149,113 @@
     "coming_soon_add_score": "लवकरच येत आहे: स्कोअर जोडा",
     "coming_soon_add_behaviour": "लवकरच येत आहे: वर्तन जोडा"
   },
+  "teacher_dashboard": {
+    "quick_add_attendance": "उपस्थिती जोडा",
+    "quick_add_student": "विद्यार्थी जोडा",
+    "quick_view_students": "विद्यार्थी पहा",
+    "quick_add_score": "गुण जोडा",
+    "loading_classes": "वर्ग लोड होत आहेत...",
+    "no_classes_assigned": "अजून तुम्हाला वर्ग नेमलेले नाहीत",
+    "showing": "दाखवत आहे",
+    "training_model": "नवीन मॉडेल ट्रेन होत आहे...",
+    "retrain_button": "नवीनतम डेटासह AI पुन्हा ट्रेन करा",
+    "loading_ml": "ML जोखीम अंदाज लोड होत आहेत...",
+    "critical_risk": "गंभीर जोखीम",
+    "ml_powered": "ML-आधारित जोखीम अंदाज",
+    "no_critical_high": "सध्या गंभीर किंवा उच्च जोखीम विद्यार्थी नाहीत",
+    "risk_score": "जोखीम स्कोअर",
+    "na": "उपलब्ध नाही"
+  },
+  "teacher_students": {
+    "gathering_data": "⏳ डेटा गोळा होत आहे",
+    "loading_students": "विद्यार्थी लोड होत आहेत...",
+    "error_loading_students": "विद्यार्थी लोड करताना त्रुटी",
+    "retry": "पुन्हा प्रयत्न करा",
+    "search_placeholder": "नाव किंवा प्रवेश क्रमांकाने शोधा...",
+    "filter_risk": "जोखीम स्तरानुसार फिल्टर",
+    "all_risk_levels": "सर्व जोखीम स्तर",
+    "group_by": "गट करा",
+    "no_grouping": "गट नाही",
+    "enrollment_no": "प्रवेश क्रमांक",
+    "contact": "संपर्क",
+    "add_students": "विद्यार्थी जोडा",
+    "all_students": "सर्व विद्यार्थी",
+    "unassigned": "नेमलेले नाही",
+    "found_count": "{{count}} विद्यार्थी सापडले",
+    "count_only": "{{count}} विद्यार्थी",
+    "section_short": "सेक",
+    "section": "विभाग"
+  },
+  "teacher_classes": {
+    "title": "माझे वर्ग",
+    "subtitle": "तुमचे नेमलेले वर्ग पहा आणि व्यवस्थापित करा",
+    "total_classes": "एकूण वर्ग",
+    "as_incharge": "इन्चार्ज म्हणून",
+    "as_subject_teacher": "विषय शिक्षक म्हणून",
+    "no_classes": "अजून वर्ग नेमलेले नाहीत",
+    "no_classes_hint": "वर्ग नेमणुकीसाठी प्रशासकाशी संपर्क करा",
+    "incharge": "इन्चार्ज",
+    "subject_teacher": "विषय शिक्षक",
+    "daily": "दैनिक",
+    "subject_wise": "विषयवार",
+    "view_students": "विद्यार्थी पहा",
+    "academic_year": "शैक्षणिक वर्ष",
+    "attendance": "उपस्थिती",
+    "teaching": "शिकवले जाणारे विषय",
+    "add": "जोडा",
+    "mark": "नोंदवा"
+  },
+  "teacher_data_entry": {
+    "attendance": "उपस्थिती",
+    "attend_short": "उपस्थित",
+    "scores": "गुण",
+    "behaviour": "वर्तन",
+    "behavior_short": "वर्तन",
+    "interventions": "हस्तक्षेप",
+    "interv_short": "हस्तक्षेप",
+    "subtitle": "उपस्थिती, गुण, वर्तन आणि हस्तक्षेप नोंदवा"
+  },
+  "teacher_leaderboard": {
+    "title": "लीडरबोर्ड",
+    "subtitle": "तुमचा क्रमांक इतर शिक्षकांच्या तुलनेत पाहा",
+    "current_rank": "तुमचा सध्याचा क्रमांक",
+    "total_xp": "एकूण XP",
+    "level": "लेव्हल",
+    "badges": "बॅजेस",
+    "top_performers": "शीर्ष कामगिरी करणारे",
+    "full_rankings": "पूर्ण क्रमवारी",
+    "loading": "लीडरबोर्ड लोड होत आहे...",
+    "stats": "लीडरबोर्ड आकडेवारी",
+    "total_teachers": "एकूण शिक्षक",
+    "average_level": "सरासरी लेव्हल",
+    "highest_xp": "सर्वाधिक XP"
+  },
+  "teacher_profile": {
+    "loading": "प्रोफाइल लोड होत आहे...",
+    "teacher": "शिक्षक",
+    "edit": "संपादित करा",
+    "edit_profile": "प्रोफाइल संपादित करा",
+    "cancel": "रद्द करा",
+    "saving": "सेव्ह होत आहे...",
+    "save_changes": "बदल जतन करा",
+    "personal_information": "वैयक्तिक माहिती",
+    "full_name": "पूर्ण नाव",
+    "email": "ईमेल",
+    "phone": "फोन",
+    "designation": "पद",
+    "city": "शहर",
+    "state": "राज्य",
+    "pincode": "पिनकोड",
+    "address": "पत्ता",
+    "full_address": "पूर्ण पत्ता",
+    "school_information": "शाळेची माहिती",
+    "school_name": "शाळेचे नाव",
+    "school_address": "शाळेचा पत्ता",
+    "account_status": "खाते स्थिती",
+    "account_active": "तुमचे खाते सक्रिय आणि सत्यापित आहे",
+    "logout": "लॉगआउट",
+    "not_provided": "माहिती उपलब्ध नाही"
+  },
   "dashboard": {
     "title": "डॅशबोर्ड",
     "subtitle": "विद्यार्थी ड्रॉपआउट जोखमीचे लवकर चेतावणी अवलोकन",
@@ -154,6 +275,49 @@
     "offline": "ऑफलाइन मोड",
     "online_desc": "सर्व डेटा सिंक केलेला आहे आणि अद्ययावत आहे",
     "offline_desc": "ऑफलाइन मोड: इंटरनेट उपलब्ध झाल्यावर डेटा सिंक होईल"
+  },
+  "admin": {
+    "title": "अॅडमिन डॅशबोर्ड",
+    "subtitle": "संपूर्ण प्रणालीचे विश्लेषण आणि वापरकर्ता व्यवस्थापन",
+    "total_teachers": "एकूण शिक्षक",
+    "active_fieldworkers": "सक्रिय फील्डवर्कर्स",
+    "total_ngos": "एकूण NGO",
+    "system_uptime": "सिस्टम अपटाइम",
+    "teacher_accounts": "शिक्षक खाती",
+    "view_all_teachers": "सर्व शिक्षक पहा",
+    "fieldworker_assignments": "फील्डवर्कर नेमणुका",
+    "view_all_fieldworkers": "सर्व फील्डवर्कर्स पहा",
+    "ngo_partnerships": "NGO भागीदारी",
+    "view_all_ngos": "सर्व NGO पहा",
+    "recent_activity": "अलीकडील क्रियाकलाप"
+  },
+  "fieldworker": {
+    "title": "फील्डवर्कर डॅशबोर्ड",
+    "subtitle": "घरभेटी आणि समुदाय सहभाग ट्रॅक करा",
+    "pending_visits": "प्रलंबित भेटी",
+    "completed_visits": "पूर्ण झालेल्या भेटी",
+    "families_engaged": "संपर्कात आलेली कुटुंबे",
+    "interventions_logged": "नोंदवलेले हस्तक्षेप",
+    "upcoming_home_visits": "आगामी घरभेटी",
+    "view_all_visits": "सर्व भेटी पहा",
+    "recent_interventions": "अलीकडील हस्तक्षेप",
+    "view_all_interventions": "सर्व हस्तक्षेप पहा",
+    "community_resources": "समुदाय संसाधने",
+    "view_resources": "संसाधने पहा"
+  },
+  "ngo": {
+    "title": "NGO डॅशबोर्ड",
+    "subtitle": "शाळांसोबत समन्वय साधा आणि प्रभाव ट्रॅक करा",
+    "partner_schools": "भागीदार शाळा",
+    "students_supported": "समर्थित विद्यार्थी",
+    "active_programs": "सक्रिय कार्यक्रम",
+    "impact_score": "इम्पॅक्ट स्कोअर",
+    "schools_overview": "शाळांचा आढावा",
+    "view_all_schools": "सर्व शाळा पहा",
+    "program_effectiveness": "कार्यक्रम प्रभावीपणा",
+    "view_program_details": "कार्यक्रम तपशील पहा",
+    "resource_allocation": "संसाधन वाटप",
+    "manage_resources": "संसाधने व्यवस्थापित करा"
   },
   "students": {
     "page_title": "विद्यार्थी यादी",
@@ -187,6 +351,47 @@
     "no_students_desc": "तुमचे फिल्टर समायोजित करून पहा किंवा विद्यार्थी जोडा।",
     "grade": "इयत्ता",
     "add_new_student": "नवीन विद्यार्थी जोडा"
+  },
+  "about": {
+    "page_title": "आमच्याबद्दल",
+    "mission_title": "आमचे ध्येय",
+    "mission_text": "विद्यार्थी ड्रॉपआउट रोखण्यासाठी शिक्षकांना डेटा-आधारित अंतर्दृष्टी देणे आणि प्रत्येक मुलाला त्याला हवी ती शिक्षणसंधी मिळवून देणे.",
+    "vision_title": "आमची दृष्टी",
+    "vision_text": "असा जग जिथे टाळता येण्याजोग्या कारणांमुळे एकही विद्यार्थी शिक्षण सोडत नाही.",
+    "team_title": "आमची टीम",
+    "features_title": "मुख्य वैशिष्ट्ये",
+    "feature_ai_title": "AI-चालित जोखीम शोध",
+    "feature_ai_desc": "उन्नत अल्गोरिदम वेळेआधी ड्रॉपआउट जोखीम ओळखतात.",
+    "feature_realtime_title": "रिअल-टाइम मॉनिटरिंग",
+    "feature_realtime_desc": "उपस्थिती, गुण आणि वर्तन नमुने तत्काळ ट्रॅक करा.",
+    "feature_interventions_title": "स्मार्ट हस्तक्षेप",
+    "feature_interventions_desc": "प्रत्येक जोखीमग्रस्त विद्यार्थ्यासाठी वैयक्तिक कृती योजना मिळवा.",
+    "feature_collaboration_title": "सहयोग साधने",
+    "feature_collaboration_desc": "फील्डवर्कर्स, NGO आणि पालकांशी सहज समन्वय साधा."
+  },
+  "contact": {
+    "page_title": "संपर्क करा",
+    "page_subtitle": "आम्हाला तुमच्याकडून ऐकायला आवडेल",
+    "contact_info_title": "संपर्क माहिती",
+    "email_label": "ईमेल",
+    "phone_label": "फोन",
+    "address_label": "पत्ता",
+    "address_text": "प्रोएक्टिव्ह एज्युकेशन असिस्टंट, भारत",
+    "form_name_label": "पूर्ण नाव",
+    "form_name_placeholder": "जॉन डो",
+    "form_email_label": "ईमेल पत्ता",
+    "form_email_placeholder": "you@example.com",
+    "form_subject_label": "विषय",
+    "form_subject_placeholder": "आम्ही तुम्हाला कशी मदत करू शकतो?",
+    "form_message_label": "संदेश",
+    "form_message_placeholder": "तुमचा संदेश लिहा...",
+    "form_submit": "संदेश पाठवा",
+    "form_sending": "पाठवत आहे..."
+  },
+  "errors": {
+    "404_title": "404 - पृष्ठ सापडले नाही",
+    "404_message": "तुम्ही शोधत असलेले पृष्ठ अस्तित्वात नाही.",
+    "go_home": "डॅशबोर्डवर जा"
   },
   "risk": {
     "high": "उच्च जोखीम",
@@ -273,5 +478,133 @@
     "goHome": "होमवर जा",
     "enable": "सक्षम करा",
     "manage": "व्यवस्थापित करा"
+  },
+  "teacher_attendance": {
+    "title": "उपस्थिती इतिहास",
+    "subtitle": "उपस्थिती रेकॉर्ड पहा आणि विश्लेषण करा",
+    "filters": "फिल्टर",
+    "search_placeholder": "विद्यार्थ्याच्या नावाने शोधा...",
+    "class": "वर्ग",
+    "all_classes": "सर्व वर्ग",
+    "from_date": "प्रारंभ तारीख",
+    "to_date": "समाप्ति तारीख",
+    "clear_filters": "फिल्टर साफ करा",
+    "show_records": "{{count}} रेकॉर्ड दाखवा",
+    "date": "तारीख",
+    "total_students": "एकूण विद्यार्थी",
+    "present": "उपस्थित",
+    "absent": "अनुपस्थित",
+    "attendance_percent": "उपस्थिती %",
+    "actions": "कृती",
+    "view": "पहा",
+    "export_to_excel": "Excel मध्ये निर्यात करा",
+    "attendance_details": "उपस्थिती तपशील",
+    "student_attendance": "विद्यार्थी उपस्थिती",
+    "name": "नाव",
+    "enrollment": "नोंदणी क्रमांक",
+    "status": "स्थिती",
+    "marked_by": "द्वारे चिन्हांकित",
+    "close": "बंद करा",
+    "no_records_found": "कोणतेही उपस्थिती रेकॉर्ड सापडले नाही",
+    "export_success": "उपस्थिती रेकॉर्ड यशस्वीरित्या निर्यात केले गेले",
+    "failed_to_load": "उपस्थिती रेकॉर्ड लोड करू शकले नाही",
+    "export_failed": "उपस्थिती रेकॉर्ड निर्यात करण्यात अपयश"
+  },
+  "teacher_score": {
+    "title": "स्कोर इतिहास",
+    "subtitle": "परीक्षा स्कोर पहा आणि विश्लेषण करा",
+    "filters": "फिल्टर",
+    "search": "शोधा",
+    "search_placeholder": "विद्यार्थ्याच्या नावाने शोधा...",
+    "class": "वर्ग",
+    "all_classes": "सर्व वर्ग",
+    "subject": "विषय",
+    "all_subjects": "सर्व विषय",
+    "from": "प्रारंभ तारीख",
+    "to": "समाप्ति तारीख",
+    "clear_filters": "फिल्टर साफ करा",
+    "export": "Excel मध्ये निर्यात करा",
+    "exam": "परीक्षा",
+    "date": "तारीख",
+    "students": "विद्यार्थी",
+    "avg_percent": "सरासरी %",
+    "pass_percent": "उत्तीर्ण %",
+    "actions": "कृती",
+    "view": "पहा",
+    "showing_records": "{{count}} रेकॉर्ड दाखवत आहे",
+    "score_details": "स्कोर तपशील",
+    "appeared": "उपस्थित होते",
+    "avg_marks": "सरासरी गुण",
+    "pass_rate": "उत्तीर्ण दर",
+    "student_scores": "विद्यार्थी स्कोर",
+    "pass": "उत्तीर्ण",
+    "fail": "अनुत्तीर्ण",
+    "close": "बंद करा",
+    "no_records": "कोणतेही स्कोर रेकॉर्ड सापडले नाही",
+    "export_success": "स्कोर रेकॉर्ड यशस्वीरित्या निर्यात केले गेले",
+    "failed_to_load": "स्कोर रेकॉर्ड लोड करू शकले नाही",
+    "export_failed": "स्कोर रेकॉर्ड निर्यात करण्यात अपयश"
+  },
+  "teacher_interventions": {
+    "title": "हस्तक्षेप इतिहास",
+    "found_count": "{{count}} हस्तक्षेप सापडले",
+    "filters": "फिल्टर",
+    "search_placeholder": "विद्यार्थ्याच्या नावाने शोधा...",
+    "all_statuses": "सर्व स्थिती",
+    "planned": "नियोजित",
+    "in_progress": "प्रक्रियेत",
+    "completed": "पूर्ण",
+    "cancelled": "रद्द केले गेले",
+    "clear_filters": "फिल्टर साफ करा",
+    "student": "विद्यार्थी",
+    "type": "प्रकार",
+    "description": "विवरण",
+    "date": "तारीख",
+    "status": "स्थिती",
+    "action": "कृती",
+    "view_student": "विद्यार्थी पहा",
+    "showing_count": "{{count}} हस्तक्षेप दाखवत आहे",
+    "no_interventions": "कोणतेही हस्तक्षेप सापडले नाही",
+    "adjust_filters": "तुमचे फिल्टर समायोजित करण्याचा प्रयत्न करा",
+    "error_loading": "हस्तक्षेप लोड करण्यात त्रुटी",
+    "retry": "पुन्हा प्रयत्न करा"
+  },
+  "teacher_gamification": {
+    "title": "🎯 शिक्षक प्रगती व पुरस्कार",
+    "subtitle": "XP अर्जित करा, स्तर वाढवा आणि बॅज आनलॉक करा!",
+    "how_it_works": "गेमिफिकेशन कसे काम करते",
+    "earn_xp": "XP अर्जित करा",
+    "earn_xp_desc": "कार्य पूर्ण करा आणि अनुभव गुण अर्जित करण्यासाठी माइलफलक प्राप्त करा",
+    "level_up": "स्तर वाढवा",
+    "level_up_desc": "स्तरांद्वारे प्रगती करण्यासाठी आणि नवीन पुरस्कार आनलॉक करण्यासाठी XP जमा करा",
+    "collect_badges": "बॅज संकलित करा",
+    "collect_badges_desc": "विशिष्ट उद्दिष्टे आणि माइलफलक प्राप्त करून विशेष बॅज अर्जित करा",
+    "climb_leaderboard": "लीडरबोर्डवर चढा",
+    "climb_leaderboard_desc": "सहकर्मींसह प्रतिस्पर्धा करा आणि आपल्या शाळेच्या लीडरबोर्डच्या शीर्षस्थानी चढा"
+  },
+  "teacher_faculty": {
+    "title": "फॅकल्टी कनेक्ट",
+    "subtitle": "आपल्या शाळेतील शिक्षकांशी जुडा",
+    "open_chat": "चॅट उघडा",
+    "faculty_in_school": "शाळेतील फॅकल्टी",
+    "pending_received": "प्राप्त प्रलंबित",
+    "connected_faculty": "जुडलेली फॅकल्टी",
+    "search_faculty": "फॅकल्टी शोधा",
+    "search_placeholder": "शिक्षकाच्या नावाने शोधा...",
+    "teachers_in_school": "{{schoolName}} मध्ये शिक्षक",
+    "no_faculty_matched": "कोणतेही फॅकल्टी सदस्य जुळले नाही",
+    "connected": "जुडलेले",
+    "chat": "चॅट",
+    "invitation_received": "आमंत्रण प्राप्त",
+    "invitation_sent": "आमंत्रण पाठविले",
+    "send_invite": "आमंत्रण पाठवा",
+    "sending": "पाठवत आहे...",
+    "incoming_invitations": "येणारे आमंत्रण",
+    "no_pending_invitation": "कोणतेही प्रलंबित आमंत्रण नाही",
+    "accept": "स्वीकार करा",
+    "reject": "नाकारा",
+    "sent_invitations": "पाठविलेले आमंत्रण",
+    "no_sent_invite": "कोणतेही प्रलंबित पाठविलेले आमंत्रण नाही",
+    "awaiting_acceptance": "स्वीकृतीच्या प्रतीक्षेत"
   }
 }
