--- a/proactive-education-assistant/src/locales/en/translation.json
+++ b/proactive-education-assistant/src/locales/en/translation.json
@@ -7,8 +7,21 @@
   "nav": {
     "dashboard": "Dashboard",
     "students": "Students",
+    "dataEntry": "Data Entry",
     "about": "About",
     "contact": "Contact"
+  },
+  "teacher_nav": {
+    "my_classes": "My Classes",
+    "add_student": "Add Student",
+    "attendance_history": "Attendance History",
+    "interventions_history": "Interventions History",
+    "score_history": "Score History",
+    "progress": "Progress",
+    "faculty_chat": "Faculty Chat",
+    "teacher_portal": "Teacher Portal",
+    "overview": "Overview",
+    "analytics_history": "Analytics & History"
   },
   "auth": {
     "login": "Login",
@@ -50,6 +63,7 @@
     "trusted_badge": "Trusted by 200+ Schools & NGOs",
     "headline": "Stop Student Dropout <1>Before It Happens</1>",
     "subheadline": "AI-powered early warning system for teachers, fieldworkers, and NGOs",
+    "early_detection": "Sign in to continue to your dashboard",
     "start_trial": "Start Free Trial",
     "view_demo": "View Demo",
     "no_cc": "No credit card required • 30-day free trial",
@@ -134,6 +148,113 @@
     "coming_soon_add_attendance": "Coming Soon: Add Attendance",
     "coming_soon_add_score": "Coming Soon: Add Score",
     "coming_soon_add_behaviour": "Coming Soon: Add Behaviour"
+  },
+  "teacher_dashboard": {
+    "quick_add_attendance": "Add Attendance",
+    "quick_add_student": "Add Student",
+    "quick_view_students": "View Students",
+    "quick_add_score": "Add Score",
+    "loading_classes": "Loading classes...",
+    "no_classes_assigned": "No classes assigned to you yet",
+    "showing": "Showing",
+    "training_model": "Training new model...",
+    "retrain_button": "Retrain AI with Latest Data",
+    "loading_ml": "Loading ML risk predictions...",
+    "critical_risk": "Critical Risk",
+    "ml_powered": "ML-powered risk predictions",
+    "no_critical_high": "No critical or high-risk students currently",
+    "risk_score": "Risk Score",
+    "na": "N/A"
+  },
+  "teacher_students": {
+    "gathering_data": "⏳ Gathering Data",
+    "loading_students": "Loading students...",
+    "error_loading_students": "Error Loading Students",
+    "retry": "Retry",
+    "search_placeholder": "Search by name or enrollment number...",
+    "filter_risk": "Filter by Risk Level",
+    "all_risk_levels": "All Risk Levels",
+    "group_by": "Group By",
+    "no_grouping": "No Grouping",
+    "enrollment_no": "Enrollment No",
+    "contact": "Contact",
+    "add_students": "Add Students",
+    "all_students": "All Students",
+    "unassigned": "Unassigned",
+    "found_count": "{{count}} students found",
+    "count_only": "{{count}} students",
+    "section_short": "Sec",
+    "section": "Section"
+  },
+  "teacher_classes": {
+    "title": "My Classes",
+    "subtitle": "Manage and view your assigned classes",
+    "total_classes": "Total Classes",
+    "as_incharge": "As Incharge",
+    "as_subject_teacher": "As Subject Teacher",
+    "no_classes": "No classes assigned yet",
+    "no_classes_hint": "Contact your administrator to get classes assigned",
+    "incharge": "Incharge",
+    "subject_teacher": "Subject Teacher",
+    "daily": "Daily",
+    "subject_wise": "Subject-wise",
+    "view_students": "View Students",
+    "academic_year": "Academic Year",
+    "attendance": "Attendance",
+    "teaching": "Teaching",
+    "add": "Add",
+    "mark": "Mark"
+  },
+  "teacher_data_entry": {
+    "attendance": "Attendance",
+    "attend_short": "Attend",
+    "scores": "Scores",
+    "behaviour": "Behaviour",
+    "behavior_short": "Behavior",
+    "interventions": "Interventions",
+    "interv_short": "Interv",
+    "subtitle": "Record attendance, scores, behavior, and interventions"
+  },
+  "teacher_leaderboard": {
+    "title": "Leaderboard",
+    "subtitle": "See how you stack up against other teachers in your school and beyond",
+    "current_rank": "Your Current Rank",
+    "total_xp": "Total XP",
+    "level": "Level",
+    "badges": "Badges",
+    "top_performers": "Top Performers",
+    "full_rankings": "Full Rankings",
+    "loading": "Loading leaderboard...",
+    "stats": "Leaderboard Stats",
+    "total_teachers": "Total Teachers",
+    "average_level": "Average Level",
+    "highest_xp": "Highest XP"
+  },
+  "teacher_profile": {
+    "loading": "Loading profile...",
+    "teacher": "Teacher",
+    "edit": "Edit",
+    "edit_profile": "Edit Profile",
+    "cancel": "Cancel",
+    "saving": "Saving...",
+    "save_changes": "Save Changes",
+    "personal_information": "Personal Information",
+    "full_name": "Full Name",
+    "email": "Email",
+    "phone": "Phone",
+    "designation": "Designation",
+    "city": "City",
+    "state": "State",
+    "pincode": "Pincode",
+    "address": "Address",
+    "full_address": "Full address",
+    "school_information": "School Information",
+    "school_name": "School Name",
+    "school_address": "School Address",
+    "account_status": "Account Status",
+    "account_active": "Your account is active and verified",
+    "logout": "Logout",
+    "not_provided": "Not provided"
   },
   "dashboard": {
     "title": "Dashboard",
@@ -357,5 +478,133 @@
     "goHome": "Go to Home",
     "enable": "Enable",
     "manage": "Manage"
+  },
+  "teacher_attendance": {
+    "title": "Attendance History",
+    "subtitle": "View and analyze attendance records",
+    "filters": "Filters",
+    "search_placeholder": "Search by student name...",
+    "class": "Class",
+    "all_classes": "All Classes",
+    "from_date": "From Date",
+    "to_date": "To Date",
+    "clear_filters": "Clear Filters",
+    "show_records": "Show {{count}} records",
+    "date": "Date",
+    "total_students": "Total Students",
+    "present": "Present",
+    "absent": "Absent",
+    "attendance_percent": "Attendance %",
+    "actions": "Actions",
+    "view": "View",
+    "export_to_excel": "Export to Excel",
+    "attendance_details": "Attendance Details",
+    "student_attendance": "Student Attendance",
+    "name": "Name",
+    "enrollment": "Enrollment No",
+    "status": "Status",
+    "marked_by": "Marked By",
+    "close": "Close",
+    "no_records_found": "No attendance records found",
+    "export_success": "Attendance records exported successfully",
+    "failed_to_load": "Failed to load attendance records",
+    "export_failed": "Failed to export attendance records"
+  },
+  "teacher_score": {
+    "title": "Score History",
+    "subtitle": "View and analyze exam scores",
+    "filters": "Filters",
+    "search": "Search",
+    "search_placeholder": "Search by student name...",
+    "class": "Class",
+    "all_classes": "All Classes",
+    "subject": "Subject",
+    "all_subjects": "All Subjects",
+    "from": "From Date",
+    "to": "To Date",
+    "clear_filters": "Clear Filters",
+    "export": "Export to Excel",
+    "exam": "Exam",
+    "date": "Date",
+    "students": "Students",
+    "avg_percent": "Avg %",
+    "pass_percent": "Pass %",
+    "actions": "Actions",
+    "view": "View",
+    "showing_records": "Showing {{count}} records",
+    "score_details": "Score Details",
+    "appeared": "Appeared",
+    "avg_marks": "Average Marks",
+    "pass_rate": "Pass Rate",
+    "student_scores": "Student Scores",
+    "pass": "Pass",
+    "fail": "Fail",
+    "close": "Close",
+    "no_records": "No score records found",
+    "export_success": "Score records exported successfully",
+    "failed_to_load": "Failed to load score records",
+    "export_failed": "Failed to export score records"
+  },
+  "teacher_interventions": {
+    "title": "Interventions History",
+    "found_count": "Found {{count}} interventions",
+    "filters": "Filters",
+    "search_placeholder": "Search by student name...",
+    "all_statuses": "All Statuses",
+    "planned": "Planned",
+    "in_progress": "In Progress",
+    "completed": "Completed",
+    "cancelled": "Cancelled",
+    "clear_filters": "Clear Filters",
+    "student": "Student",
+    "type": "Type",
+    "description": "Description",
+    "date": "Date",
+    "status": "Status",
+    "action": "Action",
+    "view_student": "View Student",
+    "showing_count": "Showing {{count}} interventions",
+    "no_interventions": "No interventions found",
+    "adjust_filters": "Try adjusting your filters",
+    "error_loading": "Error loading interventions",
+    "retry": "Retry"
+  },
+  "teacher_gamification": {
+    "title": "🎯 Teacher Progress & Rewards",
+    "subtitle": "Earn XP, level up, and unlock badges!",
+    "how_it_works": "How Gamification Works",
+    "earn_xp": "Earn XP",
+    "earn_xp_desc": "Complete tasks and achieve milestones to earn experience points",
+    "level_up": "Level Up",
+    "level_up_desc": "Accumulate XP to advance through levels and unlock new rewards",
+    "collect_badges": "Collect Badges",
+    "collect_badges_desc": "Earn special badges by achieving specific goals and milestones",
+    "climb_leaderboard": "Climb Leaderboard",
+    "climb_leaderboard_desc": "Compete with colleagues and climb to the top of your school's leaderboard"
+  },
+  "teacher_faculty": {
+    "title": "Faculty Connect",
+    "subtitle": "Connect with teachers in your school",
+    "open_chat": "Open Chat",
+    "faculty_in_school": "Faculty in School",
+    "pending_received": "Pending Received",
+    "connected_faculty": "Connected Faculty",
+    "search_faculty": "Search Faculty",
+    "search_placeholder": "Search by teacher name...",
+    "teachers_in_school": "Teachers in {{schoolName}}",
+    "no_faculty_matched": "No faculty members matched",
+    "connected": "Connected",
+    "chat": "Chat",
+    "invitation_received": "Invitation Received",
+    "invitation_sent": "Invitation Sent",
+    "send_invite": "Send Invite",
+    "sending": "Sending...",
+    "incoming_invitations": "Incoming Invitations",
+    "no_pending_invitation": "No pending invitations",
+    "accept": "Accept",
+    "reject": "Reject",
+    "sent_invitations": "Sent Invitations",
+    "no_sent_invite": "No pending sent invitations",
+    "awaiting_acceptance": "Awaiting Acceptance"
   }
 }
